# file2web

./: .gitignore  README.md
file_server/: .rustfmt.toml  Cargo.toml
file_server/src/: main.rs
file_server/src/api/: file.rs  file_dir.rs  greet.rs  mod.rs
file_server/src/service/: file_server.rs  router.rs
