[package]
name = "file_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "^1.2", features = ["static-files"] }
tokio = { version = "^1.15", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "^0.3"
serde = { version = "^1.0", features = ["derive"] }
sysinfo = { version = "^0.23"}

[profile.release]
opt-level = 3
